--- a/css/styles.css
+++ b/css/styles.css
@@ -215,7 +215,7 @@ footer {
   font-weight: bold;
   border-radius: 5px;
   background-color: blue;
-  box-shadow: 0 0 15px rgba(0, 0, 139, 0.8); 
+  box-shadow: 0 0 15px rgba(0, 0, 139, 0.8);
   color: white;
   transition: 0.3s background ease;
 }
@@ -2941,10 +2941,11 @@ body.bloqueo-scroll {
   justify-content: center;
   align-items: flex-start;
   z-index: 1000;
-  padding-top: 10vh; 
+  padding-top: 10vh;
 }
 
 .container {
+  font-family: "Nunito", sans-serif;
   position: fixed;
   top: 20%;
   left: 0;
@@ -2957,6 +2958,18 @@ body.bloqueo-scroll {
   padding: 40px;
   border-radius: 20px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
+
+.reserva__cerrar {
+  cursor: pointer;
+  position: absolute;
+  right: 1%;
+  top: 2%;
+  transition: .4s ease all;
+}
+
+.reserva__cerrar:hover {
+  scale: 1.1;
 }
 
 .form-section {
@@ -3004,10 +3017,29 @@ body.bloqueo-scroll {
 }
 .sidebar img {
   margin-top: 20px;
-  width: 80px;
+  width: 70%;
 }
 
 @media screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    overflow: auto;
+    width: 90%;
+    height: fit-content;
+  }
+
+  .form-section {
+    width: 100%;
+  }
+
+  .sidebar {
+    margin-top: 15px;
+    width: 100%;
+  }
+  .sidebar img {
+    display: none;
+  }
+
   .integrantes {
     width: 90%;
     height: 92vh;
