--- a/css/styles.css
+++ b/css/styles.css
@@ -756,7 +756,7 @@ footer {
   background-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.7),
-      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0)
     ),
     url(../media/backgrounds/rooms.webp);
@@ -777,6 +777,7 @@ footer {
 .rooms__description-p {
   width: 75%;
   color: white;
+  font-weight: 500;
   font-size: 1.3rem;
   text-align: center;
 }
