--- a/css/styles.css
+++ b/css/styles.css
@@ -1199,71 +1199,149 @@ button {
 
 /*Sección de Sobre el hotel*/
 .main_sobre_hotel {
-  height: 300vh;
-}
-.contenedor_total_sb_ht {
-  height: 300%;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-  top: 12vw;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  font-family: var(--font-principal);
+  z-index: 1;
   height: fit-content;
-  gap: 350px;
-}
-.caja_sb_ht {
-  width: 74%;
-  height: 470px;
-  background-color: #ece1ce;
-  border-radius: 40px;
-  padding: 2.5%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 250px;
 }
-.imagen_centrada {
+
+.adentro {
+  height: fit-content;
+  width: 40vw;
+  padding: 12px;
+}
+.adentro h3 {
+  text-align: center;
+  font-size: 6rem;
+  margin-bottom: 1em;
+}
+
+.subtitle__aboutus {
+  font-size: 3rem !important;
+}
+
+.description__aboutus {
+  font-size: 1.2rem !important;
+}
+
+.contiene_vision {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10%;
+}
+.contiene_linea {
+  width: 100%;
+  display: flex;
+  justify-items: center;
+}
+.linea_separadora {
+  width: 80%;
+  background: #b6b6b6;
+  height: 1px;
+  display: flex;
+  flex: 1;
+  margin-bottom: 5%;
+}
+.fondo_sb_h {
+  background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.8) 0%,
+      rgba(64, 64, 64, 0.7) 25%,
+      rgba(255, 255, 255, 0.2) 50%,
+      rgba(64, 64, 64, 0.7) 75%,
+      rgba(0, 0, 0, 0.8) 100%
+    ),
+    url(../media/imgs/Imagen_de_fondo_sb_h.webp);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  min-height: 600px;
+  height: fit-content;
+  padding: 5rem 1rem;
+  display: flex;
+  margin-bottom: 50px;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 8px 42px 0px rgba(0, 0, 0, 0.41);
+  -webkit-box-shadow: 0px 8px 42px 0px rgba(0, 0, 0, 0.41);
+  -moz-box-shadow: 0px 8px 42px 0px rgba(0, 0, 0, 0.41);
 }
-.caja_sb_ht h1,
-.caja_sb_ht p {
-  margin-left: -38px;
+.fondo_sb_h h2 {
+  color: white;
+  text-shadow: 4px 2px 3px rgb(90, 90, 90);
+  font-size: 7vw;
 }
-.descripcion_sb_ht {
-  width: 70vh;
-  max-width: 1000px;
-  text-align: justify;
+.imagen_sb_h {
+  width: 25rem;
+  height: 21rem;
 }
-.descripcion_sb_ht p,
-.descripcion_sb_ht h1 {
-  font-size: clamp(13.6px, 4vw + 1rem, 16px);
-  line-height: 1.45;
+.separa_main {
+  display: none;
+  position: fixed;
+  top: -100vh;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #000;
+  z-index: 1000;
+  transition: transform 1.2s cubic-bezier(0.4, 0, 0.2);
 }
-.descripcion_sb_ht h1 {
-  margin-bottom: 16px;
+.main_sobre_hotel h3 {
+  font-size: 4vh;
 }
-.imagen_sb_ht {
-  width: 37%;
-  height: 81%;
-  margin-left: 6%;
-  min-width: 40%;
+.main_sobre_hotel p {
+  font-size: 2vh;
+  text-align: center;
 }
-.imagen_sb_ht img {
-  border: 4px solid white;
-  border-radius: 10px;
-  width: 100%;
-  height: 100%;
+
+@media (max-width: 320px) {
+  .main_sobre_hotel {
+    margin-bottom: 1000px;
+  }
 }
-.imgen_sb_int {
-  box-shadow: 0px 0px 14px 9px rgb(218, 217, 217) inset;
-  -webkit-box-shadow: 0px 0px 14px 9px rgb(218, 217, 217) inset;
-  -moz-box-shadow: 0px 0px 14px 9px rgb(218, 217, 217) inset;
-}
-.sombra_sb_ht {
-  box-shadow: 8px 12px 4px 2px rgba(234, 234, 234, 0.75);
-  -webkit-box-shadow: 8px 12px 4px 2px rgba(234, 234, 234, 0.75);
-  -moz-box-shadow: 8px 12px 4px 2px rgba(234, 234, 234, 0.75);
+
+@media (max-width: 640px) {
+  .fondo_sb_h h2 {
+    font-size: 4rem;
+    text-align: center;
+  }
+
+  .main_sobre_hotel h3 {
+    font-size: 3.6vh;
+  }
+  .main_sobre_hotel p {
+    font-size: 1.8vh;
+  }
+  .adentro {
+    width: 80vw;
+    padding: 0;
+  }
+  .imagen_sb_h {
+    width: 80vw;
+    height: 70vw;
+  }
+  .contiene_vision {
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    width: 100%;
+    margin-bottom: 10%;
+  }
+  ._final {
+    margin-bottom: 100px;
+  }
+  .main_sobre_hotel {
+    height: fit-content;
+    width: 100%;
+  }
+  .fondo_sb_h {
+    height: 400px;
+  }
 }
 
 @media (max-width: 1680px) {
@@ -1316,11 +1394,6 @@ button {
   .caja_sb_ht {
     gap: 4px;
     margin-bottom: -150px;
-  }
-}
-@media (min-height: 1000px) {
-  .main_sobre_hotel {
-    height: 2140px;
   }
 }
 
